# MaskGenerator

./: .gitignore  README.md  test.txt
Example/images/: list.json
src/: CMakeLists.txt  History.cpp  History.h  HistoryLogWidget.cpp  HistoryLogWidget.h  MaskGenerator.qrc  MaskGenerator.ui  MaskGeneratorView.cpp  MaskGeneratorView.h  MyGraphicsView.cpp  MyGraphicsView.h  Tools.cpp  Tools.h  Utils.cpp  Utils.h  main.cpp
src/resource/: list.txt
